--- a/03-single-window-complex-object-example/index.html
+++ b/03-single-window-complex-object-example/index.html
@@ -12,7 +12,7 @@ https://cnoss.github.io/generative-gestaltung/
 ############################################################################ -->
 
 <head>
-  <title>Single Window Example</title>
+  <title>Single Window, Complex Object Example</title>
 
   <link rel="icon" href="../shared/assets/favicon/favicon.ico">
   <link rel="apple-touch-icon" href="../shared/assets/favicon/apple-touch-icon.png">
