--- a/04-multi-window-simple-object-task/index.html
+++ b/04-multi-window-simple-object-task/index.html
@@ -12,7 +12,7 @@ https://cnoss.github.io/generative-gestaltung/
 ############################################################################ -->
 
 <head>
-  <title>Single Window Example</title>
+  <title>Multi-Window, Simple Object</title>
 
   <link rel="icon" href="../shared/assets/favicon/favicon.ico">
   <link rel="apple-touch-icon" href="../shared/assets/favicon/apple-touch-icon.png">
