--- a/05-multi-window-complex-object-playground/index.html
+++ b/05-multi-window-complex-object-playground/index.html
@@ -12,7 +12,7 @@ https://cnoss.github.io/generative-gestaltung/
 ############################################################################ -->
 
 <head>
-  <title>Single Window Example</title>
+  <title>Multi-Window, Complex Object Playground</title>
 
   <link rel="icon" href="../shared/assets/favicon/favicon.ico">
   <link rel="apple-touch-icon" href="../shared/assets/favicon/apple-touch-icon.png">
