--- a/10-dot-in-the-middle/index.html
+++ b/10-dot-in-the-middle/index.html
@@ -12,7 +12,7 @@ https://cnoss.github.io/generative-gestaltung/
 ############################################################################ -->
 
 <head>
-  <title>Single Window, Simple Object Example</title>
+  <title>Centered Dot</title>
 
   <link rel="icon" href="../shared/assets/favicon/favicon.ico">
   <link rel="apple-touch-icon" href="../shared/assets/favicon/apple-touch-icon.png">
