--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
   <link rel="stylesheet" href="shared/assets/styles/combined.css">
 
+  <link rel="stylesheet" href="shared/assets/libs/github.min.css">
+  <script src="shared/assets/libs/highlight.min.js"></script>
+  <script src="shared/assets/libs/highlightjs-line-numbers.min.js"></script>
   <script src="shared/assets/libs/markdown-it.min.js"></script>
   <script src="shared/assets/scripts/helper.js"></script>
 
@@ -111,6 +114,18 @@
     <h2>Rotating Circles Playground</h2>
     <div class="content">
       <a class="button mv-xl" href="06-rotating-circles-playground/index.html">Let's Play</a>
+    </div>
+  </section>
+
+  <section id="centered-dot" class="collapsible is-part-of-presentation">
+    <h2>Centered Dot Example</h2>
+    <div class="content">
+      <p data-js-markdownit>This example demonstrates how a simple dot can be centered in the middle of the screen. The dot remains in the center even when the window is resized or moved.</p>
+
+      <p>
+        This code adjusts the canvas based on the browser window’s position on the screen, allowing the sketch to stay aligned with the physical screen space. By translating using -window.screenX and -window.screenY, it relates the drawing to the window’s location on the screen — not just the browser viewport. This is useful when multiple windows or screens are involved and you want consistent positioning relative to the actual screen, not just within the browser.
+      </p>
+      <a class="button mv-xl" href="10-dot-in-the-middle/index.html">Show Example</a>
     </div>
   </section>
 </body>
