Added useful snippets

--- a/00-core-concepts/index.html
+++ b/00-core-concepts/index.html
@@ -76,7 +76,7 @@
         → Useful for responsive design or checking if the window is minimized or resized.
       </p>
 
-      <h3>window.outerWidth / window.outerHeight</h3>
+      <code>window.outerWidth / window.outerHeight</code>
       <p>
         Gives the full size of the browser window, including borders and toolbars.
         → Helps detect the total window dimensions, including chrome.
