--- a/01-working-with-p5/index.html
+++ b/01-working-with-p5/index.html
@@ -125,11 +125,143 @@
       </div>
     </section>
 
+    <section id="useful-snippets" class="collapsible" data-js-highlight>
+      <h2>Useful Snippets</h2>
+      <div class="content">
+        <p>
+          This is a collection of useful p5.js code snippets for common tasks and creative coding patterns. Each snippet
+          is designed to be short, practical, and easy to adapt to your own sketches.
+        </p>
+
+        <h3>Controlling Color</h3>
+        <p>
+          colorMode() in p5.js sets how colors are interpreted. Using
+          <a href="https://color.adobe.com/de/create/color-wheel">HSB</a> (Hue, Saturation, Brightness)
+          is often better because it separates color, intensity, and lightness, making color control more intuitive.
+        </p>
+        <pre><code>function setup() {
+  createCanvas(400, 400);
+  colorMode(HSB, 360, 100, 100, 100);
+  fill(90, 100, 70, 100);
+  stroke(270, 100, 70, 100);
+  strokeWeight(10);
+}
+
+function draw() {
+  background(0, 0, 0, 100);
+  ellipse(mouseX, mouseY, 50, 50);
+}</code></pre>
+
+        <h3>Random Numbers</h3>
+        <p>
+          random() in p5.js returns a random number, useful for adding unpredictability.
+          randomSeed() sets the starting point for random values, making results repeatable — helpful for debugging or
+          creating consistent outcomes.
+        </p>
+        <pre><code>function setup() {
+  createCanvas(400, 400);
+  colorMode(HSB, 360, 100, 100, 100);
+  fill(90, 100, 70, 100);
+  stroke(270, 100, 70, 100);
+  strokeWeight(10);
+}
+
+function draw() {
+  background(0, 0, 0, 100);
+  const dotSize = random(-20, 100);
+  ellipse(mouseX, mouseY, dotSize);
+}</code></pre>
+
+        <h3>Map Data</h3>
+        <p>
+          map() in p5.js converts a number from one range to another.
+          It's useful for scaling values, like turning mouse position into color or speed.
+        </p>
+        <pre><code>function setup() {
+  createCanvas(400, 400);
+  colorMode(HSB, 360, 100, 100, 100);
+  fill(90, 100, 70, 100);
+}
+
+function draw() {
+  background(0, 0, 0, 100);
+  const hue = map(mouseX, 0, 400, 0, 360);
+  const dotSize = map(mouseY, 0, 400, 0, 50);
+  fill(hue, 100, 100, 100);
+  ellipse(mouseX, mouseY, dotSize);
+}</code></pre>
+
+        <h3>Distance between points</h3>
+        <p>
+          dist() in p5.js calculates the distance between two points.
+          It's useful for measuring how far apart objects are, often used in movement or collision detection.
+        </p>
+        <pre><code>function setup() {
+  createCanvas(400, 400);
+  colorMode(HSB, 360, 100, 100, 100);
+  fill(90, 100, 70, 100);
+}
+
+function draw() {
+  background(0, 0, 0, 100);
+  const dotSize = dist(0, 0, mouseX, mouseY);
+  ellipse(width/2, height/2, dotSize);
+}</code></pre>
+
+        <h3>Translate & Rotate</h3>
+        <p>
+          translate() in p5.js moves the origin of the drawing space, letting you draw shapes in a new position.
+          rotate() turns the drawing space, useful for rotating shapes around a point.
+        </p>
+        <pre><code>function setup() {
+  createCanvas(400, 400);
+  colorMode(HSB, 360, 100, 100, 100);
+  fill(335, 92, 87, 100);
+}
+
+function draw() {
+  background(0, 0, 0, 100);
+  translate(width/2, height/2);
+  rotate(45);
+  rect(-30, -30, 60, 60);
+}</code></pre>
+
+        <h3>Simple Animation</h3>
+        <p>
+          This code creates a rotating rectangle in the center of the canvas.
+          The translate() function moves the origin to the center, and rotate(angle) spins the rectangle around that
+          point.
+          angle increases over time, causing continuous rotation, while the semi-transparent background creates a fading
+          trail effect.
+        </p>
+        <pre><code>let angle = 0;
+
+function setup() {
+  createCanvas(400, 400);
+  colorMode(HSB, 360, 100, 100, 100);
+  fill(335, 92, 87, 100);
+}
+
+function draw() {
+  background(0, 0, 0, 10);
+  translate(width/2, height/2);
+  rotate(angle);
+  rect(0, 0, 60, 60);
+  angle += 0.08;
+}</code></pre>
+
+      </div>
+    </section>
+
     <section id="center-canvas" class="collapsible">
       <h2>Fit Canvas to Screen Size</h2>
       <div class="content">
         <div data-js-markdownit>
-          This code adjusts the canvas based on the browser window’s position on the screen, allowing the sketch to stay aligned with the physical screen space. By translating using -window.screenX and -window.screenY, it relates the drawing to the window’s location on the screen — not just the browser viewport. This is useful when multiple windows or screens are involved and you want consistent positioning relative to the actual screen, not just within the browser.
+          This code adjusts the canvas based on the browser window’s position on the screen, allowing the sketch to stay
+          aligned with the physical screen space. By translating using -window.screenX and -window.screenY, it relates
+          the drawing to the window’s location on the screen — not just the browser viewport. This is useful when
+          multiple windows or screens are involved and you want consistent positioning relative to the actual screen,
+          not just within the browser.
         </div>
 
         <div data-js-center-canvas></div>
@@ -166,7 +298,8 @@
     fetchAndShowExternalCode('center-canvas.js', '[data-js-center-canvas]');
     fetchAndShowExternalCode('easing-level-1.js', '[data-js-easing-code-example-1]');
     fetchAndShowExternalCode('easing-level-2.js', '[data-js-easing-code-example-2]');
-    
+
+    hljs.highlightAll();
   </script>
 </body>
 
