--- a/index.html
+++ b/index.html
@@ -128,6 +128,21 @@
       <a class="button mv-xl" href="10-dot-in-the-middle/index.html">Show Example</a>
     </div>
   </section>
+
+  <section id="presentation">
+    <h2>About</h2>
+    <div class="content">
+      <p>The Multi-Window Experiences with p5.js workshop explores the creation of synchronized, interactive visuals across multiple browser windows using p5.js. Participants delve into techniques for detecting window positions and facilitating real-time communication between windows through methods like window.opener, postMessage, localStorage, and SharedWorker. This hands-on session is part of the "Web-Technologien" seminar within the "Weaving the Web" focus of the Master's program in Media Informatics at TH Köln.</p>
+
+      <p data-js-markdownit>Prof. [Christian Noss](https//christiannoss.de) brings his expertise in creative coding, web development, and interface design to the workshop. As a professor at TH Köln, he teaches modules such as "Generative Gestaltung" and "Web Technologies," emphasizing the fusion of design and technology. </p>
+
+      <p data-js-markdownit>For more information about the workshop, please visit the [Web-Technologies](https://th-koeln.github.io/mtw-web-technologien) website.</p>
+
+      <p data-js-markdownit>Here you can find the [slides for the workshop](https://cnoss.github.io/slides/presentations/misc/multi-window-with-p5/).</p>
+
+      <p><strong>have fun 😎</strong></p>
+
+    </div>
 </body>
 
 </html>
