--- a/00-core-concepts/index.html
+++ b/00-core-concepts/index.html
@@ -347,7 +347,7 @@
   </section>
 
   <section class="collapsible">
-    <h2>Further Reading</h2>
+    <h2>Further Readings</h2>
 
     <div class="content">
       <ul>
