--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
       <p data-js-markdownit>Prof. [Christian Noss](https//christiannoss.de) brings his expertise in creative coding, web development, and interface design to the workshop. As a professor at TH Köln, he teaches modules such as "Generative Gestaltung" and "Web Technologies," emphasizing the fusion of design and technology. </p>
 
-      <p data-js-markdownit>For more information about the workshop, please visit the [Web-Technologies](https://th-koeln.github.io/mtw-web-technologien) website.</p>
+      <p data-js-markdownit>For more information about the workshop, please visit the [Web-Technologies](https://th-koeln.github.io/mi-master-wtw/web-technologien/) website.</p>
 
       <p data-js-markdownit>Here you can find the [slides for the workshop](https://cnoss.github.io/slides/presentations/misc/multi-window-with-p5/).</p>
 
