Added casting example

--- a/index.html
+++ b/index.html
@@ -127,6 +127,15 @@
     </div>
   </section>
 
+  <section id="handoff-example" class="collapsible">
+    <h2>Casting Example</h2>
+    <div class="content">
+      <p data-js-markdownit> This sketch renders radial shapes that visually represent two browser windows. As each window moves, its form and color adapt to its screen position. When the windows begin to overlap, a subtle “casting” effect occurs — one shape takes over, echoing the other's form and presence, creating the illusion of a shared, shifting identity across space.
+      </p>
+      <a class="button mv-xl" href="./07-handoff-example/index.html">Show Example</a>
+    </div>
+  </section>  
+
   <section id="assignments" class="collapsible is-assignment">
     <h2>Assignments</h2>
     <div class="content">
